exports[`no-confusing-array-splice > invalid(1): array.splice(index, 1 as const, element) 1`] = `

  1 | array.splice(index, 1 as const, element)

`;

exports[`no-confusing-array-splice > invalid(1): array.splice(index, 1 as const, element) 2`] = `

Message:
> 1 | array.splice(index, 1 as const, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array[index] = element

`;

exports[`no-confusing-array-splice > invalid(1): array.splice(index, 1, element) 1`] = `

  1 | array.splice(index, 1, element)

`;

exports[`no-confusing-array-splice > invalid(1): array.splice(index, 1, element) 2`] = `

Message:
> 1 | array.splice(index, 1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array[index] = element

`;

exports[`no-confusing-array-splice > invalid(10): array.splice(-1, 0.5, element) 1`] = `

  1 | array.splice(-1, 0.5, element)

`;

exports[`no-confusing-array-splice > invalid(10): array.splice(-1, 0.5, element) 2`] = `

Message:
> 1 | array.splice(-1, 0.5, element)
    |       ^^^^^^ Avoid using \`splice()\` to insert at \`-1\`.

Suggestion 1/1: Resolve the insertion index explicitly.:
  1 | array.splice(Math.max(array.length - 1, 0), 0.5, element)

`;

exports[`no-confusing-array-splice > invalid(10): array.toSpliced(index, 1 satisfies number, element) 1`] = `

  1 | array.toSpliced(index, 1 satisfies number, element)

`;

exports[`no-confusing-array-splice > invalid(10): array.toSpliced(index, 1 satisfies number, element) 2`] = `

Message:
> 1 | array.toSpliced(index, 1 satisfies number, element)
    |       ^^^^^^^^^ Prefer a direct element replacement instead of \`toSpliced()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array.with(index, element)

`;

exports[`no-confusing-array-splice > invalid(11): array.splice(- 1, 0, element) 1`] = `

  1 | array.splice(- 1, 0, element)

`;

exports[`no-confusing-array-splice > invalid(11): array.splice(- 1, 0, element) 2`] = `

Message:
> 1 | array.splice(- 1, 0, element)
    |       ^^^^^^ Avoid using \`splice()\` to insert at \`-1\`.

Suggestion 1/1: Resolve the insertion index explicitly.:
  1 | array.splice(Math.max(array.length - 1, 0), 0, element)

`;

exports[`no-confusing-array-splice > invalid(11): array.toSpliced(-1 as const, 0 as const, element) 1`] = `

  1 | array.toSpliced(-1 as const, 0 as const, element)

`;

exports[`no-confusing-array-splice > invalid(11): array.toSpliced(-1 as const, 0 as const, element) 2`] = `

Message:
> 1 | array.toSpliced(-1 as const, 0 as const, element)
    |       ^^^^^^^^^ Avoid using \`toSpliced()\` to insert at \`-1\`.

Suggestion 1/1: Resolve the insertion index explicitly.:
  1 | array.toSpliced(Math.max(array.length - 1, 0), 0 as const, element)

`;

exports[`no-confusing-array-splice > invalid(12): array.splice(-1, +0, element) 1`] = `

  1 | array.splice(-1, +0, element)

`;

exports[`no-confusing-array-splice > invalid(12): array.splice(-1, +0, element) 2`] = `

Message:
> 1 | array.splice(-1, +0, element)
    |       ^^^^^^ Avoid using \`splice()\` to insert at \`-1\`.

Suggestion 1/1: Resolve the insertion index explicitly.:
  1 | array.splice(Math.max(array.length - 1, 0), +0, element)

`;

exports[`no-confusing-array-splice > invalid(12): array.toSpliced(-1 satisfies number, 0 satisfies number, element) 1`] = `

  1 | array.toSpliced(-1 satisfies number, 0 satisfies number, element)

`;

exports[`no-confusing-array-splice > invalid(12): array.toSpliced(-1 satisfies number, 0 satisfies number, element) 2`] = `

Message:
> 1 | array.toSpliced(-1 satisfies number, 0 satisfies number, element)
    |       ^^^^^^^^^ Avoid using \`toSpliced()\` to insert at \`-1\`.

Suggestion 1/1: Resolve the insertion index explicitly.:
  1 | array.toSpliced(Math.max(array.length - 1, 0), 0 satisfies number, element)

`;

exports[`no-confusing-array-splice > invalid(13): array.splice(-1, -0, element) 1`] = `

  1 | array.splice(-1, -0, element)

`;

exports[`no-confusing-array-splice > invalid(13): array.splice(-1, -0, element) 2`] = `

Message:
> 1 | array.splice(-1, -0, element)
    |       ^^^^^^ Avoid using \`splice()\` to insert at \`-1\`.

Suggestion 1/1: Resolve the insertion index explicitly.:
  1 | array.splice(Math.max(array.length - 1, 0), -0, element)

`;

exports[`no-confusing-array-splice > invalid(13): array.toSpliced(-1 satisfies number, 1, element) 1`] = `

  1 | array.toSpliced(-1 satisfies number, 1, element)

`;

exports[`no-confusing-array-splice > invalid(13): array.toSpliced(-1 satisfies number, 1, element) 2`] = `

Message:
> 1 | array.toSpliced(-1 satisfies number, 1, element)
    |       ^^^^^^^^^ Prefer a direct element replacement instead of \`toSpliced()\`.

`;

exports[`no-confusing-array-splice > invalid(14): array.splice(-1, 0b0, element) 1`] = `

  1 | array.splice(-1, 0b0, element)

`;

exports[`no-confusing-array-splice > invalid(14): array.splice(-1, 0b0, element) 2`] = `

Message:
> 1 | array.splice(-1, 0b0, element)
    |       ^^^^^^ Avoid using \`splice()\` to insert at \`-1\`.

Suggestion 1/1: Resolve the insertion index explicitly.:
  1 | array.splice(Math.max(array.length - 1, 0), 0b0, element)

`;

exports[`no-confusing-array-splice > invalid(14): array.toSpliced(-(1 satisfies number), 1, element) 1`] = `

  1 | array.toSpliced(-(1 satisfies number), 1, element)

`;

exports[`no-confusing-array-splice > invalid(14): array.toSpliced(-(1 satisfies number), 1, element) 2`] = `

Message:
> 1 | array.toSpliced(-(1 satisfies number), 1, element)
    |       ^^^^^^^^^ Prefer a direct element replacement instead of \`toSpliced()\`.

`;

exports[`no-confusing-array-splice > invalid(15): array.splice(- - -1, 0, element) 1`] = `

  1 | array.splice(- - -1, 0, element)

`;

exports[`no-confusing-array-splice > invalid(15): array.splice(- - -1, 0, element) 2`] = `

Message:
> 1 | array.splice(- - -1, 0, element)
    |       ^^^^^^ Avoid using \`splice()\` to insert at \`-1\`.

Suggestion 1/1: Resolve the insertion index explicitly.:
  1 | array.splice(Math.max(array.length - 1, 0), 0, element)

`;

exports[`no-confusing-array-splice > invalid(15): function f(foo: unknown[]) { foo.splice(index, 1, element); } 1`] = `

  1 | function f(foo: unknown[]) { foo.splice(index, 1, element); }

`;

exports[`no-confusing-array-splice > invalid(15): function f(foo: unknown[]) { foo.splice(index, 1, element); } 2`] = `

Message:
> 1 | function f(foo: unknown[]) { foo.splice(index, 1, element); }
    |                                  ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | function f(foo: unknown[]) { foo[index] = element; }

`;

exports[`no-confusing-array-splice > invalid(16): array.splice(-(-(-1)), 0, element) 1`] = `

  1 | array.splice(-(-(-1)), 0, element)

`;

exports[`no-confusing-array-splice > invalid(16): array.splice(-(-(-1)), 0, element) 2`] = `

Message:
> 1 | array.splice(-(-(-1)), 0, element)
    |       ^^^^^^ Avoid using \`splice()\` to insert at \`-1\`.

Suggestion 1/1: Resolve the insertion index explicitly.:
  1 | array.splice(Math.max(array.length - 1, 0), 0, element)

`;

exports[`no-confusing-array-splice > invalid(16): array.splice(null as any, 1, element) 1`] = `

  1 | array.splice(null as any, 1, element)

`;

exports[`no-confusing-array-splice > invalid(16): array.splice(null as any, 1, element) 2`] = `

Message:
> 1 | array.splice(null as any, 1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

`;

exports[`no-confusing-array-splice > invalid(17): array.splice(undefined!, 1, element) 1`] = `

  1 | array.splice(undefined!, 1, element)

`;

exports[`no-confusing-array-splice > invalid(17): array.splice(undefined!, 1, element) 2`] = `

Message:
> 1 | array.splice(undefined!, 1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

`;

exports[`no-confusing-array-splice > invalid(17): array.toSpliced(index, 1, element) 1`] = `

  1 | array.toSpliced(index, 1, element)

`;

exports[`no-confusing-array-splice > invalid(17): array.toSpliced(index, 1, element) 2`] = `

Message:
> 1 | array.toSpliced(index, 1, element)
    |       ^^^^^^^^^ Prefer a direct element replacement instead of \`toSpliced()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array.with(index, element)

`;

exports[`no-confusing-array-splice > invalid(18): array.toSpliced(index, 1.0, element) 1`] = `

  1 | array.toSpliced(index, 1.0, element)

`;

exports[`no-confusing-array-splice > invalid(18): array.toSpliced(index, 1.0, element) 2`] = `

Message:
> 1 | array.toSpliced(index, 1.0, element)
    |       ^^^^^^^^^ Prefer a direct element replacement instead of \`toSpliced()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array.with(index, element)

`;

exports[`no-confusing-array-splice > invalid(19): array.toSpliced(index, 1.5, element) 1`] = `

  1 | array.toSpliced(index, 1.5, element)

`;

exports[`no-confusing-array-splice > invalid(19): array.toSpliced(index, 1.5, element) 2`] = `

Message:
> 1 | array.toSpliced(index, 1.5, element)
    |       ^^^^^^^^^ Prefer a direct element replacement instead of \`toSpliced()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array.with(index, element)

`;

exports[`no-confusing-array-splice > invalid(2): array.splice(index, 1.0, element) 1`] = `

  1 | array.splice(index, 1.0, element)

`;

exports[`no-confusing-array-splice > invalid(2): array.splice(index, 1.0, element) 2`] = `

Message:
> 1 | array.splice(index, 1.0, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array[index] = element

`;

exports[`no-confusing-array-splice > invalid(2): array.splice(index, <number>1, element) 1`] = `

  1 | array.splice(index, <number>1, element)

`;

exports[`no-confusing-array-splice > invalid(2): array.splice(index, <number>1, element) 2`] = `

Message:
> 1 | array.splice(index, <number>1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array[index] = element

`;

exports[`no-confusing-array-splice > invalid(20): array.toSpliced(index, 0x1, element) 1`] = `

  1 | array.toSpliced(index, 0x1, element)

`;

exports[`no-confusing-array-splice > invalid(20): array.toSpliced(index, 0x1, element) 2`] = `

Message:
> 1 | array.toSpliced(index, 0x1, element)
    |       ^^^^^^^^^ Prefer a direct element replacement instead of \`toSpliced()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array.with(index, element)

`;

exports[`no-confusing-array-splice > invalid(21): array.toSpliced(index, +1, element) 1`] = `

  1 | array.toSpliced(index, +1, element)

`;

exports[`no-confusing-array-splice > invalid(21): array.toSpliced(index, +1, element) 2`] = `

Message:
> 1 | array.toSpliced(index, +1, element)
    |       ^^^^^^^^^ Prefer a direct element replacement instead of \`toSpliced()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array.with(index, element)

`;

exports[`no-confusing-array-splice > invalid(22): (array || other).toSpliced(index, 1, element) 1`] = `

  1 | (array || other).toSpliced(index, 1, element)

`;

exports[`no-confusing-array-splice > invalid(22): (array || other).toSpliced(index, 1, element) 2`] = `

Message:
> 1 | (array || other).toSpliced(index, 1, element)
    |                  ^^^^^^^^^ Prefer a direct element replacement instead of \`toSpliced()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | (array || other).with(index, element)

`;

exports[`no-confusing-array-splice > invalid(23): const result = array.toSpliced(index, 1, element) 1`] = `

  1 | const result = array.toSpliced(index, 1, element)

`;

exports[`no-confusing-array-splice > invalid(23): const result = array.toSpliced(index, 1, element) 2`] = `

Message:
> 1 | const result = array.toSpliced(index, 1, element)
    |                      ^^^^^^^^^ Prefer a direct element replacement instead of \`toSpliced()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | const result = array.with(index, element)

`;

exports[`no-confusing-array-splice > invalid(24): array.toSpliced(-1, 1, element) 1`] = `

  1 | array.toSpliced(-1, 1, element)

`;

exports[`no-confusing-array-splice > invalid(24): array.toSpliced(-1, 1, element) 2`] = `

Message:
> 1 | array.toSpliced(-1, 1, element)
    |       ^^^^^^^^^ Prefer a direct element replacement instead of \`toSpliced()\`.

`;

exports[`no-confusing-array-splice > invalid(25): array.toSpliced(-1.5, 1, element) 1`] = `

  1 | array.toSpliced(-1.5, 1, element)

`;

exports[`no-confusing-array-splice > invalid(25): array.toSpliced(-1.5, 1, element) 2`] = `

Message:
> 1 | array.toSpliced(-1.5, 1, element)
    |       ^^^^^^^^^ Prefer a direct element replacement instead of \`toSpliced()\`.

`;

exports[`no-confusing-array-splice > invalid(26): array.toSpliced(array.length, 1, element) 1`] = `

  1 | array.toSpliced(array.length, 1, element)

`;

exports[`no-confusing-array-splice > invalid(26): array.toSpliced(array.length, 1, element) 2`] = `

Message:
> 1 | array.toSpliced(array.length, 1, element)
    |       ^^^^^^^^^ Prefer a direct element replacement instead of \`toSpliced()\`.

`;

exports[`no-confusing-array-splice > invalid(27): array.toSpliced(-1, 0, element) 1`] = `

  1 | array.toSpliced(-1, 0, element)

`;

exports[`no-confusing-array-splice > invalid(27): array.toSpliced(-1, 0, element) 2`] = `

Message:
> 1 | array.toSpliced(-1, 0, element)
    |       ^^^^^^^^^ Avoid using \`toSpliced()\` to insert at \`-1\`.

Suggestion 1/1: Resolve the insertion index explicitly.:
  1 | array.toSpliced(Math.max(array.length - 1, 0), 0, element)

`;

exports[`no-confusing-array-splice > invalid(28): array.toSpliced(-1.5, 0.5, element) 1`] = `

  1 | array.toSpliced(-1.5, 0.5, element)

`;

exports[`no-confusing-array-splice > invalid(28): array.toSpliced(-1.5, 0.5, element) 2`] = `

Message:
> 1 | array.toSpliced(-1.5, 0.5, element)
    |       ^^^^^^^^^ Avoid using \`toSpliced()\` to insert at \`-1\`.

Suggestion 1/1: Resolve the insertion index explicitly.:
  1 | array.toSpliced(Math.max(array.length - 1, 0), 0.5, element)

`;

exports[`no-confusing-array-splice > invalid(29): array.toSpliced(- 1, 0, element) 1`] = `

  1 | array.toSpliced(- 1, 0, element)

`;

exports[`no-confusing-array-splice > invalid(29): array.toSpliced(- 1, 0, element) 2`] = `

Message:
> 1 | array.toSpliced(- 1, 0, element)
    |       ^^^^^^^^^ Avoid using \`toSpliced()\` to insert at \`-1\`.

Suggestion 1/1: Resolve the insertion index explicitly.:
  1 | array.toSpliced(Math.max(array.length - 1, 0), 0, element)

`;

exports[`no-confusing-array-splice > invalid(3): array.splice(index, 0x1, element) 1`] = `

  1 | array.splice(index, 0x1, element)

`;

exports[`no-confusing-array-splice > invalid(3): array.splice(index, 0x1, element) 2`] = `

Message:
> 1 | array.splice(index, 0x1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array[index] = element

`;

exports[`no-confusing-array-splice > invalid(3): array.splice(index, 1!, element) 1`] = `

  1 | array.splice(index, 1!, element)

`;

exports[`no-confusing-array-splice > invalid(3): array.splice(index, 1!, element) 2`] = `

Message:
> 1 | array.splice(index, 1!, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array[index] = element

`;

exports[`no-confusing-array-splice > invalid(30): array.toSpliced(-1, +0, element) 1`] = `

  1 | array.toSpliced(-1, +0, element)

`;

exports[`no-confusing-array-splice > invalid(30): array.toSpliced(-1, +0, element) 2`] = `

Message:
> 1 | array.toSpliced(-1, +0, element)
    |       ^^^^^^^^^ Avoid using \`toSpliced()\` to insert at \`-1\`.

Suggestion 1/1: Resolve the insertion index explicitly.:
  1 | array.toSpliced(Math.max(array.length - 1, 0), +0, element)

`;

exports[`no-confusing-array-splice > invalid(31): array.toSpliced(-1, -0, element) 1`] = `

  1 | array.toSpliced(-1, -0, element)

`;

exports[`no-confusing-array-splice > invalid(31): array.toSpliced(-1, -0, element) 2`] = `

Message:
> 1 | array.toSpliced(-1, -0, element)
    |       ^^^^^^^^^ Avoid using \`toSpliced()\` to insert at \`-1\`.

Suggestion 1/1: Resolve the insertion index explicitly.:
  1 | array.toSpliced(Math.max(array.length - 1, 0), -0, element)

`;

exports[`no-confusing-array-splice > invalid(32): array.toSpliced(-1, 0b0, element) 1`] = `

  1 | array.toSpliced(-1, 0b0, element)

`;

exports[`no-confusing-array-splice > invalid(32): array.toSpliced(-1, 0b0, element) 2`] = `

Message:
> 1 | array.toSpliced(-1, 0b0, element)
    |       ^^^^^^^^^ Avoid using \`toSpliced()\` to insert at \`-1\`.

Suggestion 1/1: Resolve the insertion index explicitly.:
  1 | array.toSpliced(Math.max(array.length - 1, 0), 0b0, element)

`;

exports[`no-confusing-array-splice > invalid(33): array.splice(1, 1, element) 1`] = `

  1 | array.splice(1, 1, element)

`;

exports[`no-confusing-array-splice > invalid(33): array.splice(1, 1, element) 2`] = `

Message:
> 1 | array.splice(1, 1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array[1] = element

`;

exports[`no-confusing-array-splice > invalid(34): array.splice(NaN, 1, element) 1`] = `

  1 | array.splice(NaN, 1, element)

`;

exports[`no-confusing-array-splice > invalid(34): array.splice(NaN, 1, element) 2`] = `

Message:
> 1 | array.splice(NaN, 1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

`;

exports[`no-confusing-array-splice > invalid(35): array.splice(1.5, 1, element) 1`] = `

  1 | array.splice(1.5, 1, element)

`;

exports[`no-confusing-array-splice > invalid(35): array.splice(1.5, 1, element) 2`] = `

Message:
> 1 | array.splice(1.5, 1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

`;

exports[`no-confusing-array-splice > invalid(36): array.splice(true, 1, element) 1`] = `

  1 | array.splice(true, 1, element)

`;

exports[`no-confusing-array-splice > invalid(36): array.splice(true, 1, element) 2`] = `

Message:
> 1 | array.splice(true, 1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

`;

exports[`no-confusing-array-splice > invalid(37): array.splice(null, 1, element) 1`] = `

  1 | array.splice(null, 1, element)

`;

exports[`no-confusing-array-splice > invalid(37): array.splice(null, 1, element) 2`] = `

Message:
> 1 | array.splice(null, 1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

`;

exports[`no-confusing-array-splice > invalid(38): array.splice(undefined, 1, element) 1`] = `

  1 | array.splice(undefined, 1, element)

`;

exports[`no-confusing-array-splice > invalid(38): array.splice(undefined, 1, element) 2`] = `

Message:
> 1 | array.splice(undefined, 1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

`;

exports[`no-confusing-array-splice > invalid(39): array.splice('1', 1, element) 1`] = `

  1 | array.splice('1', 1, element)

`;

exports[`no-confusing-array-splice > invalid(39): array.splice('1', 1, element) 2`] = `

Message:
> 1 | array.splice('1', 1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array['1'] = element

`;

exports[`no-confusing-array-splice > invalid(4): array.splice(index, +1, element) 1`] = `

  1 | array.splice(index, +1, element)

`;

exports[`no-confusing-array-splice > invalid(4): array.splice(index, +1, element) 2`] = `

Message:
> 1 | array.splice(index, +1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array[index] = element

`;

exports[`no-confusing-array-splice > invalid(4): array.splice(index, 1 satisfies number, element) 1`] = `

  1 | array.splice(index, 1 satisfies number, element)

`;

exports[`no-confusing-array-splice > invalid(4): array.splice(index, 1 satisfies number, element) 2`] = `

Message:
> 1 | array.splice(index, 1 satisfies number, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array[index] = element

`;

exports[`no-confusing-array-splice > invalid(40): array.splice('0', 1, element) 1`] = `

  1 | array.splice('0', 1, element)

`;

exports[`no-confusing-array-splice > invalid(40): array.splice('0', 1, element) 2`] = `

Message:
> 1 | array.splice('0', 1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array['0'] = element

`;

exports[`no-confusing-array-splice > invalid(41): array.splice('1.5', 1, element) 1`] = `

  1 | array.splice('1.5', 1, element)

`;

exports[`no-confusing-array-splice > invalid(41): array.splice('1.5', 1, element) 2`] = `

Message:
> 1 | array.splice('1.5', 1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

`;

exports[`no-confusing-array-splice > invalid(42): array.splice('abc', 1, element) 1`] = `

  1 | array.splice('abc', 1, element)

`;

exports[`no-confusing-array-splice > invalid(42): array.splice('abc', 1, element) 2`] = `

Message:
> 1 | array.splice('abc', 1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

`;

exports[`no-confusing-array-splice > invalid(43): array.splice('1x', 1, element) 1`] = `

  1 | array.splice('1x', 1, element)

`;

exports[`no-confusing-array-splice > invalid(43): array.splice('1x', 1, element) 2`] = `

Message:
> 1 | array.splice('1x', 1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

`;

exports[`no-confusing-array-splice > invalid(44): array.splice('', 1, element) 1`] = `

  1 | array.splice('', 1, element)

`;

exports[`no-confusing-array-splice > invalid(44): array.splice('', 1, element) 2`] = `

Message:
> 1 | array.splice('', 1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

`;

exports[`no-confusing-array-splice > invalid(45): array.splice('01', 1, element) 1`] = `

  1 | array.splice('01', 1, element)

`;

exports[`no-confusing-array-splice > invalid(45): array.splice('01', 1, element) 2`] = `

Message:
> 1 | array.splice('01', 1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

`;

exports[`no-confusing-array-splice > invalid(46): array.splice(0, 1, (9, 8)) 1`] = `

  1 | array.splice(0, 1, (9, 8))

`;

exports[`no-confusing-array-splice > invalid(46): array.splice(0, 1, (9, 8)) 2`] = `

Message:
> 1 | array.splice(0, 1, (9, 8))
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array[0] = (9, 8)

`;

exports[`no-confusing-array-splice > invalid(47): array.toSpliced(0, 1, (9, 8)) 1`] = `

  1 | array.toSpliced(0, 1, (9, 8))

`;

exports[`no-confusing-array-splice > invalid(47): array.toSpliced(0, 1, (9, 8)) 2`] = `

Message:
> 1 | array.toSpliced(0, 1, (9, 8))
    |       ^^^^^^^^^ Prefer a direct element replacement instead of \`toSpliced()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array.with(0, (9, 8))

`;

exports[`no-confusing-array-splice > invalid(48): array.toSpliced((0, 1), 1, element) 1`] = `

  1 | array.toSpliced((0, 1), 1, element)

`;

exports[`no-confusing-array-splice > invalid(48): array.toSpliced((0, 1), 1, element) 2`] = `

Message:
> 1 | array.toSpliced((0, 1), 1, element)
    |       ^^^^^^^^^ Prefer a direct element replacement instead of \`toSpliced()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array.with((0, 1), element)

`;

exports[`no-confusing-array-splice > invalid(49): array.splice(-1, 0, array.pop()) 1`] = `

  1 | array.splice(-1, 0, array.pop())

`;

exports[`no-confusing-array-splice > invalid(49): array.splice(-1, 0, array.pop()) 2`] = `

Message:
> 1 | array.splice(-1, 0, array.pop())
    |       ^^^^^^ Avoid using \`splice()\` to insert at \`-1\`.

`;

exports[`no-confusing-array-splice > invalid(5): array.items.splice(index, 1, element) 1`] = `

  1 | array.items.splice(index, 1, element)

`;

exports[`no-confusing-array-splice > invalid(5): array.items.splice(index, 1, element) 2`] = `

Message:
> 1 | array.items.splice(index, 1, element)
    |             ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array.items[index] = element

`;

exports[`no-confusing-array-splice > invalid(5): array.splice(-1 as const, 0 as const, element) 1`] = `

  1 | array.splice(-1 as const, 0 as const, element)

`;

exports[`no-confusing-array-splice > invalid(5): array.splice(-1 as const, 0 as const, element) 2`] = `

Message:
> 1 | array.splice(-1 as const, 0 as const, element)
    |       ^^^^^^ Avoid using \`splice()\` to insert at \`-1\`.

Suggestion 1/1: Resolve the insertion index explicitly.:
  1 | array.splice(Math.max(array.length - 1, 0), 0 as const, element)

`;

exports[`no-confusing-array-splice > invalid(50): array.splice(1e21, 1, element) 1`] = `

  1 | array.splice(1e21, 1, element)

`;

exports[`no-confusing-array-splice > invalid(50): array.splice(1e21, 1, element) 2`] = `

Message:
> 1 | array.splice(1e21, 1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

`;

exports[`no-confusing-array-splice > invalid(51): array.splice(index + 1, 1, element) 1`] = `

  1 | array.splice(index + 1, 1, element)

`;

exports[`no-confusing-array-splice > invalid(51): array.splice(index + 1, 1, element) 2`] = `

Message:
> 1 | array.splice(index + 1, 1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array[index + 1] = element

`;

exports[`no-confusing-array-splice > invalid(6): array.splice(-1 satisfies number, 0 satisfies number, element) 1`] = `

  1 | array.splice(-1 satisfies number, 0 satisfies number, element)

`;

exports[`no-confusing-array-splice > invalid(6): array.splice(-1 satisfies number, 0 satisfies number, element) 2`] = `

Message:
> 1 | array.splice(-1 satisfies number, 0 satisfies number, element)
    |       ^^^^^^ Avoid using \`splice()\` to insert at \`-1\`.

Suggestion 1/1: Resolve the insertion index explicitly.:
  1 | array.splice(Math.max(array.length - 1, 0), 0 satisfies number, element)

`;

exports[`no-confusing-array-splice > invalid(6): array.splice(/* comment */ index, 1, element) 1`] = `

  1 | array.splice(/* comment */ index, 1, element)

`;

exports[`no-confusing-array-splice > invalid(6): array.splice(/* comment */ index, 1, element) 2`] = `

Message:
> 1 | array.splice(/* comment */ index, 1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

`;

exports[`no-confusing-array-splice > invalid(7): array.toSpliced(index, 1 as const, element) 1`] = `

  1 | array.toSpliced(index, 1 as const, element)

`;

exports[`no-confusing-array-splice > invalid(7): array.toSpliced(index, 1 as const, element) 2`] = `

Message:
> 1 | array.toSpliced(index, 1 as const, element)
    |       ^^^^^^^^^ Prefer a direct element replacement instead of \`toSpliced()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array.with(index, element)

`;

exports[`no-confusing-array-splice > invalid(7): const removed = array.splice(index, 1, element) 1`] = `

  1 | const removed = array.splice(index, 1, element)

`;

exports[`no-confusing-array-splice > invalid(7): const removed = array.splice(index, 1, element) 2`] = `

Message:
> 1 | const removed = array.splice(index, 1, element)
    |                       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

`;

exports[`no-confusing-array-splice > invalid(8): array.splice(-1, 1, element) 1`] = `

  1 | array.splice(-1, 1, element)

`;

exports[`no-confusing-array-splice > invalid(8): array.splice(-1, 1, element) 2`] = `

Message:
> 1 | array.splice(-1, 1, element)
    |       ^^^^^^ Prefer a direct element replacement instead of \`splice()\`.

`;

exports[`no-confusing-array-splice > invalid(8): array.toSpliced(index, <number>1, element) 1`] = `

  1 | array.toSpliced(index, <number>1, element)

`;

exports[`no-confusing-array-splice > invalid(8): array.toSpliced(index, <number>1, element) 2`] = `

Message:
> 1 | array.toSpliced(index, <number>1, element)
    |       ^^^^^^^^^ Prefer a direct element replacement instead of \`toSpliced()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array.with(index, element)

`;

exports[`no-confusing-array-splice > invalid(9): array.splice(-1, 0, element) 1`] = `

  1 | array.splice(-1, 0, element)

`;

exports[`no-confusing-array-splice > invalid(9): array.splice(-1, 0, element) 2`] = `

Message:
> 1 | array.splice(-1, 0, element)
    |       ^^^^^^ Avoid using \`splice()\` to insert at \`-1\`.

Suggestion 1/1: Resolve the insertion index explicitly.:
  1 | array.splice(Math.max(array.length - 1, 0), 0, element)

`;

exports[`no-confusing-array-splice > invalid(9): array.toSpliced(index, 1!, element) 1`] = `

  1 | array.toSpliced(index, 1!, element)

`;

exports[`no-confusing-array-splice > invalid(9): array.toSpliced(index, 1!, element) 2`] = `

Message:
> 1 | array.toSpliced(index, 1!, element)
    |       ^^^^^^^^^ Prefer a direct element replacement instead of \`toSpliced()\`.

Suggestion 1/1: Use direct element replacement.:
  1 | array.with(index, element)

`;
